tests/snapshots/generics_parser_tests__generics_ok_generic_class_multiple.ast.snap
---
source: tests/generics_parser_tests.rs
expression: json
---
{
  "items": [
    {
      "Class": {
        "name": "Pair",
        "type_params": [
          {
            "name": "T",
            "constraints": []
          },
          {
            "name": "U",
            "constraints": []
          }
        ],
        "implements": [],
        "members": [
          {
            "Field": {
              "name": "first",
              "visibility": "Public",
              "type_ref": {
                "Simple": "T"
              },
              "init": null,
              "is_optional": false
            }
          },
          {
            "Field": {
              "name": "second",
              "visibility": "Public",
              "type_ref": {
                "Simple": "U"
              },
              "init": null,
              "is_optional": false
            }
          },
          {
            "Method": {
              "name": "constructor",
              "visibility": "Public",
              "type_params": [],
              "params": [
                {
                  "pattern": {
                    "Identifier": "first"
                  },
                  "type_ref": {
                    "Simple": "T"
                  },
                  "default": null
                },
                {
                  "pattern": {
                    "Identifier": "second"
                  },
                  "type_ref": {
                    "Simple": "U"
                  },
                  "default": null
                }
              ],
              "return_type": null,
              "body": {
                "stmts": [
                  {
                    "Assign": {
                      "target": {
                        "Member": {
                          "object": {
                            "Identifier": "this"
                          },
                          "property": "first"
                        }
                      },
                      "value": {
                        "Identifier": "first"
                      },
                      "op": null
                    }
                  },
                  {
                    "Assign": {
                      "target": {
                        "Member": {
                          "object": {
                            "Identifier": "this"
                          },
                          "property": "second"
                        }
                      },
                      "value": {
                        "Identifier": "second"
                      },
                      "op": null
                    }
                  }
                ]
              },
              "expr_body": null,
              "is_async_inferred": false,
              "contains_fail": false
            }
          },
          {
            "Method": {
              "name": "getFirst",
              "visibility": "Public",
              "type_params": [],
              "params": [],
              "return_type": {
                "Simple": "T"
              },
              "body": {
                "stmts": [
                  {
                    "Return": {
                      "expr": {
                        "Member": {
                          "object": {
                            "Identifier": "this"
                          },
                          "property": "first"
                        }
                      }
                    }
                  }
                ]
              },
              "expr_body": null,
              "is_async_inferred": false,
              "contains_fail": false
            }
          },
          {
            "Method": {
              "name": "getSecond",
              "visibility": "Public",
              "type_params": [],
              "params": [],
              "return_type": {
                "Simple": "U"
              },
              "body": {
                "stmts": [
                  {
                    "Return": {
                      "expr": {
                        "Member": {
                          "object": {
                            "Identifier": "this"
                          },
                          "property": "second"
                        }
                      }
                    }
                  }
                ]
              },
              "expr_body": null,
              "is_async_inferred": false,
              "contains_fail": false
            }
          }
        ],
        "needs_serde": false,
        "is_data": false
      }
    }
  ]
}
