tests/snapshots/generics_parser_tests__generics_ok_generic_class_simple.ast.snap
---
source: tests/generics_parser_tests.rs
expression: json
---
{
  "items": [
    {
      "Class": {
        "name": "Box",
        "type_params": [
          {
            "name": "T",
            "constraints": []
          }
        ],
        "implements": [],
        "members": [
          {
            "Field": {
              "name": "value",
              "visibility": "Public",
              "type_ref": {
                "Simple": "T"
              },
              "init": null,
              "is_optional": false
            }
          },
          {
            "Method": {
              "name": "constructor",
              "visibility": "Public",
              "type_params": [],
              "params": [
                {
                  "pattern": {
                    "Identifier": "value"
                  },
                  "type_ref": {
                    "Simple": "T"
                  },
                  "default": null
                }
              ],
              "return_type": null,
              "body": {
                "stmts": [
                  {
                    "Assign": {
                      "target": {
                        "Member": {
                          "object": {
                            "Identifier": "this"
                          },
                          "property": "value"
                        }
                      },
                      "value": {
                        "Identifier": "value"
                      },
                      "op": null
                    }
                  }
                ]
              },
              "expr_body": null,
              "is_async_inferred": false,
              "contains_fail": false
            }
          },
          {
            "Method": {
              "name": "get",
              "visibility": "Public",
              "type_params": [],
              "params": [],
              "return_type": {
                "Simple": "T"
              },
              "body": {
                "stmts": [
                  {
                    "Return": {
                      "expr": {
                        "Member": {
                          "object": {
                            "Identifier": "this"
                          },
                          "property": "value"
                        }
                      }
                    }
                  }
                ]
              },
              "expr_body": null,
              "is_async_inferred": false,
              "contains_fail": false
            }
          }
        ],
        "needs_serde": false,
        "is_data": false
      }
    }
  ]
}
