tests/snapshots/generics_parser_tests__generics_ok_generic_function_multiple.ast.snap
---
source: tests/generics_parser_tests.rs
expression: json
---
{
  "items": [
    {
      "Function": {
        "name": "pair",
        "type_params": [
          {
            "name": "T",
            "constraints": []
          },
          {
            "name": "U",
            "constraints": []
          }
        ],
        "params": [
          {
            "pattern": {
              "Identifier": "first"
            },
            "type_ref": {
              "Simple": "T"
            },
            "default": null
          },
          {
            "pattern": {
              "Identifier": "second"
            },
            "type_ref": {
              "Simple": "U"
            },
            "default": null
          }
        ],
        "return_type": null,
        "body": {
          "stmts": [
            {
              "Return": {
                "expr": {
                  "ArrayLiteral": [
                    {
                      "Identifier": "first"
                    },
                    {
                      "Identifier": "second"
                    }
                  ]
                }
              }
            }
          ]
        },
        "expr_body": null,
        "is_async_inferred": false,
        "contains_fail": false
      }
    }
  ]
}
